test/sematest/invalid/redefinition_of_variable_in_same_method3.java
class A {
  public static void main(String[] args) {
  }

  public void bla(int a, int b){
    {
      int c = 4;
      {
        int c = 5;
      }
    }
  }
}